--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
   },
   "homepage": "https://github.com/chandonn/aws-s3-file-upload#readme",
   "dependencies": {
-    "aws-sdk": "2.1584.0",
+    "@aws-sdk/client-s3": "^3.540.0",
+    "@aws-sdk/lib-storage": "^3.540.0",
+    "@types/formidable": "^3.4.5",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
-    "express": "4.19.1"
+    "express": "4.19.1",
+    "formidable": "^3.5.1"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
